# TuneScout

./: .gitignore  Dockerfile  README.md  TuneScout_Poell_Obwexer.pptx  main.py  pyproject.toml  requirements.txt  settings.toml
.github/workflows/: main.yml
App/: app.py
Databank/: Amazon_DynamoDB.py  Amazon_S3.py  Description.md  User_Management.py
Projectmanagement/: project_schedule.mpp
equalizer/: equalizer_functions.py  features.py  filters.py  visualization.py
pipeline/: audio_processing.py  audioconverter.py  config.py  database.py  fingerprinting.py  hashing.py  record.py  settings.py  utils.py
tests/: __init__.py  test_dynamoDB.py  test_s3.py
